# 100daysOfCodingChallenge

./: .gitignore  .gitmodules  README.md
Examples_of_filesystem/: main.cpp
Examples_of_filesystem2/: foobar.txt  main.cpp
Examples_of_filesystem3/: main.cpp
Examples_of_filesystem4/: main.cpp
Examples_of_filesystem5/: main.cpp
Iterators_c++17/1_iterableRange/: main.cpp
Iterators_c++17/2_STL_compatibleIterators/: main.cpp
Iterators_c++17/3_IteratorAdapters/: main.cpp
Iterators_c++17/4_Fibonaci/: main.cpp
Iterators_c++17/5_RevIterators/: main.cpp
Iterators_c++17/6_terminatingIterators/: main.cpp
Iterators_c++17/7_checkIterator/: main.cpp
Iterators_c++17/8_zipIterator/: main.cpp
LambdaFunctions_c++17/1_functionsOnRun/: main.cpp
LambdaFunctions_c++17/2_polymorphyLambda/: main.cpp
LambdaFunctions_c++17/3_composingByConcatenate/: main.cpp
LambdaFunctions_c++17/4_ComplexPredicates/: main.cpp
LambdaFunctions_c++17/5_multipleFunctionSameInput/: main.cpp
LambdaFunctions_c++17/6_transform_if_lambdas/: main.cpp
LambdaFunctions_c++17/7_cartesianMultiply/: main.cpp
LambdaFunctions_c++17/roughCopy/: main.cpp
STLalgorithmBasics/1_CopyingFromConToCon/: main.cpp
STLalgorithmBasics/2_sorting/: main.cpp
STLalgorithmBasics/3_removingSpecificData/: main.cpp
STLalgorithmBasics/4_transformingContainers/: main.cpp
STLalgorithmBasics/5_FindingItems/: main.cpp
STLalgorithmBasics/6_clampValuesOfRange/: main.cpp
STLalgorithmBasics/7_RandomSamples/: main.cpp
STLalgorithmBasics/8_PermutationsOfInput/: main.cpp
STLalgorithmBasics/9_dictionary/: dict.txt  main.cpp
c++17_STLAlgorithmsAdvanced/1_trieClass/: main.cpp
c++17_STLAlgorithmsAdvanced/2_searchSuggestion/: database.txt  main.cpp
c++17_STLAlgorithmsAdvanced/3_fourier/: main.cpp
c++17_STLAlgorithmsAdvanced/4_errorSum/: main.cpp
c++17_STLAlgorithmsAdvanced/5_MandlebrotRenderer/: main.cpp
c++17_STLAlgorithmsAdvanced/8_removeWhiteSpace/: main.cpp
c++17_STLAlgorithmsAdvanced/9_compressString/: main.cpp
c++17_STLcontainers/10_sentenceLength/: main.cpp
c++17_STLcontainers/11_todoList/: main.cpp
c++17_STLcontainers/1_vectorRemove/: main.cpp
c++17_STLcontainers/2_deleteUnsortedVec/: main.cpp
c++17_STLcontainers/3_insertItemsEfficientlyConditionally/: main.cpp
c++17_STLcontainers/4_mapInsertionHintSemantics/: main.cpp
c++17_STLcontainers/5_modifyingKeyMap/: main.cpp
c++17_STLcontainers/6_unorderedMapCustomTypes/: main.cpp
c++17_STLcontainers/7_FilteringDuplicateFromInput/: main.cpp
c++17_STLcontainers/8_implementRPN/: main.cpp
c++17_STLcontainers/9_wordFreqCounter/: main.cpp
c++17_UtilityClasses/10_weak_ptr/: main.cpp
c++17_UtilityClasses/11_legacy_shared_ptr/: main.cpp
c++17_UtilityClasses/1_RatioConversion/: main.cpp
c++17_UtilityClasses/2_relative_absolute_times/: main.cpp
c++17_UtilityClasses/3_optional/: main.cpp
p01_sumOfNaturals/: main  main.cpp
p02_GreatestCommonDivisor/: main  main.cpp
p03_LeastCommonMultiple/: main  main.cpp
p04_LargestPrime_lessThanTarget/: main  main.cpp
p05_sexyPrimeNumbers/: main.cpp
p06_AbundantNumbers/: main  main.cpp
p07_AmicableNumbers/: main.cpp
p08_ArmstrongNumber/: main.cpp
p09_primefactors/: main.cpp
p10_GrayCode/: main.cpp
p11_RomanNumerals/: main.cpp
p12_largestCollatzSeq/: main.cpp
p13_PI/: main.cpp
p14_isbn/: main  main.cpp
p15_IPv4/: main.cpp
p16_enumeratingIPv4/: main.cpp
p17_2Darray/: main.cpp
p18_minimumFunction/: main.cpp
p19_addRangeToContainer/: main.cpp
p20_anyNoneAll/: main.cpp
p21_systemHandler/: main.cpp
p22_tempLiterals/: main.cpp
p23_Binary2String/: main.cpp
p24_String2Binary/: main.cpp
p25_captilizingTitle/: main.cpp
p26_stringJoin/: main.cpp
p27_splittingIntoTokens/: main.cpp
p28_palindromicString/: main.cpp
p29_LicensePlateValidate/: main.cpp
p30_ExtractingURLParts/: main.cpp
p31_DateTransform/: main.cpp
p32_PascalKhayyamTriangle/: main.cpp
p33_TabularPrinting/: main.cpp
p34_deleteEmptyLines/: example.txt  example2.txt  main.cpp
p35_sizeOfDirectory/: main.cpp
p36_deleteOlderThanGiven/: main.cpp
p37_findFilesRegex/: main.cpp
p38_tempLogFile/: lastlog.txt  main.cpp
p39_functionTimeMeasure/: main.cpp
p40_numberOfDays/: main.cpp
p41_DayofTheWeek/: main.cpp
p42_Day&weekOfYear/: main.cpp
p43_multipleTimeZones/: main.cpp
p44_printCalendar/: main.cpp
p45_priorityQueue/: main.cpp
p46_circular_buffer/: main.cpp
p47_doubleBuffer/: main.cpp
p48_frequentElement/: main.cpp
p49_textHistogram/: main.cpp
p50_phoneNumFilter/: main.cpp
p50_transformPhoneNumbers/: main.cpp
p52_permutationsOfString/: main.cpp
p53_averageRatingOfMovies/: main.cpp
p54_pairwiseAlgorithm/: main.cpp
p55_zipAlgorithm/: main.cpp
p56_selectAlgorithm/: main.cpp
p57_sortAlgorithm/: main.cpp
p58_shortestPath/: main.cpp
p59_Dijkstra/: CMakeLists.txt  main.cpp  run.sh
p59_weasel/: main.cpp
p60_theGameOfLife/: CMakeLists.txt  main.cpp  run.sh
p61_parallelTransform/: CMakeLists.txt  main.cpp  run.sh
p62_parallelMinMax/: CMakeLists.txt  main.cpp
p62_parallelMinMax/include/: parallelAlg.hpp
p62_parallelMinMax/src/: CMakeLists.txt  parallelAlg.cpp
p63_parallelMinMaxAsync/: main.cpp  run.sh
p64_parallelSort/: CMakeLists.txt  main.cpp  run.sh
p67_ValidatingPassword/: main.cpp
p68_randomPassGen/: main.cpp
p69_socialNumGen/: main.cpp
p73_xmlDataSerializing/: CMakeLists.txt  main.cpp  run.sh
p85_ReadFromDatabase/: CMakeLists.txt  main.cpp  moviedatabase  run.sh
p85_ReadFromDatabase/include/: SystemInit.hpp  databasehandler.hpp  logging.hpp
p85_ReadFromDatabase/lib/: CMakeLists.txt  SystemInit.cpp  databasehandler.cpp  logging.cpp
p88_CaesarCipher/: CMakeLists.txt  main.cpp
p89_vigenerCipher/: CMakeLists.txt  main.cpp
p89_vigenerCipher/include/: CaesarCipher.hpp  CipherBase.hpp  VigenerCipher.hpp
p89_vigenerCipher/src/: CMakeLists.txt  CaesarCipher.cpp  CipherBase.cpp  VigenerCipher.cpp
p90_base64/: CMakeLists.txt  main.cpp
p91_ValidateCredentials/: CMakeLists.txt  README.md  main.cpp  run.sh
(+34 files in other folders)
